<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp"
    android:descendantFocusability="blocksDescendants" >
    
    <TextView
            android:id="@+id/food_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/edit_text_new_foodItem"
            android:textColor="@color/black"
            android:textSize="@dimen/large"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:ellipsize="end" />

    <!--
        Only one of the LinearLayouts "expiration_message" and "expiration_time" will be
        visible at any given time. That is, one of them will have a layout_weight of 1,
        while the other must have a layout_weight of 0.
     -->
    <LinearLayout
        android:id="@+id/expiration_message"
        android:layout_width="0dp"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/expired"
            android:textColor="@color/theme_red"
            android:textSize="@dimen/medium"
            android:fontFamily="sans-serif-light"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expiration_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/expiration_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="@dimen/medium"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:ellipsize="end" />
    
        <TextView
            android:id="@+id/expiration_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/days"
            android:textColor="@color/black"
            android:textSize="@dimen/small"
            android:fontFamily="sans-serif-light"
            android:maxLines="1" />
        
    </LinearLayout>
 
</LinearLayout>