<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/frij_theme" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/frij_lower"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="@dimen/huge"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:drawableLeft="@drawable/logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp"
        android:descendantFocusability="blocksDescendants" >

        <TextView
            android:id="@+id/dont_show_this_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="left"
            android:text="@string/dont_show_this_again"
            android:textSize="@dimen/large"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light" />

        <!-- Blank space between two text to prevent clickable area -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:text="@string/skip"
            android:textSize="@dimen/large"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light" />

    </LinearLayout>

</LinearLayout>